--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "ipfs": "^0.34.4",
+    "uuid": "^3.3.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
