--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "ipfs": "^0.34.4",
+    "libp2p": "^0.25.3",
     "phaser": "^3.16.2",
     "uuid": "^3.3.2",
     "vue": "^2.6.6",
